# aps

./: .clang-format  .coveragerc  .flake8  .gitattributes  .gitignore  .pre-commit-config.yaml  .travis.yml  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  TODO  codecov.yml  decode.sh  distributed_train_am.sh  requirements-dev.txt  requirements.txt  train.sh  train_am.sh  train_lm.sh
.ci/: .travis.yml  check_bin.sh  install_csrc_deps.sh  install_git_lfs.sh  install_libtorch.sh  install_test_deps.sh  lint.sh
.github/workflows/: lint.yml  test.yml  test_csrc.yml  test_python.yml
aps/: conf.py  const.py  cplx.py  eval.py  libs.py  opts.py  plot.py  utils.py
aps/asr/: __init__.py  att.py  ctc.py  enh_att.py  enh_transformers.py  transducers.py  transformers.py
aps/distributed/: __init__.py  backend.py
aps/eval/: __init__.py  asr.py  sse.py  wrapper.py
aps/io/: __init__.py  audio.py  text.py  utils.py
aps/loader/: __init__.py  audio.py  simu.py
aps/metric/: __init__.py  asr.py  reporter.py  sep.py  snr.py  sse.py  wer.py
aps/rt_sse/: base.py
aps/sep/: __init__.py  toy.py  unsupervised_enh.py  utils.py
aps/sse/: __init__.py  base.py  rnn.py  toy.py  unsupervised_enh.py  utils.py
aps/streaming_asr/: ctc.py  transducers.py  utils.py
aps/task/: __init__.py  asr.py  base.py  eend.py  kd.py  ml.py  objf.py  sep.py  sse.py  ts.py  unsuper.py  utils.py
aps/tokenizer/: __init__.py  base.py  subword.py  vocab.py  word.py
aps/trainer/: __init__.py  apex.py  base.py  ddp.py  hvd.py  lr.py  ss.py
aps/transform/: __init__.py  asr.py  augment.py  enh.py  streaming.py  utils.py
asr/: batch_decode.py  compute_att_ali.py  compute_mask.py  compute_mvdr_stats.py  compute_wer.py  debug_loader.py  decode.py  decode_faster.py  launch_distributed_train_am.py  ngram_rescore.py  seq2seq.py  train.py  train_am.py  train_lm.py  train_unsuper_enh.py
asr/feats/: __init__.py  asr.py  enh.py  spec_aug.py  utils.py
asr/libs/: dataset.py  distributed_trainer.py  evaluator.py  logger.py  noamopt.py  scheduler.py  trainer.py  utils.py
asr/loader/: __init__.py  conf.py  conf_loader.py  corpus.py  enh_loader.py  enhan.py  kaldi_loader.py  text_loader.py  tok_loader.py  token.py  token_loader.py  utils.py  wav_loader.py
asr/nn/: __init__.py  attention.py  common.py  decoder.py  encoder.py  enh_las_asr.py  enh_transformer.py  enh_transformer_asr.py  feature.py  las_asr.py  transducer_asr.py  transformer.py  transformer_asr.py  unsupervised_enh.py
asr/transform/: asr.py  spec_aug.py
cmd/: align.py  aps  archive_wav.py  average_checkpoint.py  check_audio.py  compute_gmvn.py  compute_ss_metric.py  compute_wer.py  decode.py  decode_batch.py  distributed_train_am.py  distributed_train_lm.py  distributed_train_ss.py  export_for_libtorch.py  extract_wav.py  lm_rescore.py  ngram_rescore.py  separate.py  separate_blind.py  text_tokenize.py  train_am.py  train_lm.py  train_ss.py
conf/: 1a.yaml  README.md  aishell_v2.yaml  beam_las_v1.yaml  beam_transformer_v1.yaml  beam_transformer_v2.yaml  ctx.yaml  las.yaml  loc_common.yaml  mvdr_transformer.yaml  rnnlm.yaml  templ.yaml  transducer.yaml  transducer_v2.yaml  transformer.yaml
conf/aishell_v1/: 1a.yaml  1b.yaml  1c.yaml  1d.yaml  1e.yaml  1f.yaml
conf/aishell_v2/: 1b.yaml  1c.yaml  README.md
conf/asr/: att.yaml  beam_att.yaml  beam_transformer_v1.yaml  beam_transformer_v2.yaml  mvdr_transformer.yaml  rnnlm.yaml  transducer_v1.yaml  transducer_v2.yaml  transformer.yaml
conf/chime4_ml/: 1a.yaml
conf/chime4_unsuper/: 1a.yaml
conf/dns_is2020/: 1a.yaml
conf/enh/: crn.yaml  dcunet.yaml
conf/gigaspeech/: 1a.yaml
conf/librispeech/: 1a.yaml  1b.yaml  1c.yaml
conf/multi_cn/: 1a.yaml
conf/sep/: dprnn.yaml  tasnet.yaml
conf/timit/: 1a.yaml  1b.yaml
conf/wham/: 1a.yaml  1b.yaml
csrc/: CMakeLists.txt
csrc/base/: pipeline.cc  pipeline.h  stft.cc  stft.h
csrc/enh/: dfsmn.cc  dfsmn.h  time_frequency.cc  time_frequency.h  transformer.cc  transformer.h
csrc/io/: basic.cc  basic.h  wav.cc  wav.h
csrc/transform/: stft.cc  stft.h
csrc/utils/: args.cc  args.h  fft.cc  fft.h  io.cc  io.h  log.h  math.cc  math.h  stft.cc  stft.h  timer.h  wav.cc  wav.h  window.cc  window.h
demo/: README.md
demo/real_time_enhancement/cpp/: CMakeLists.txt  rt_enh_dfsmn.cc  rt_enh_transformer.cc
demos/: README.md
demos/real_time_enhancement/cpp/: CMakeLists.txt  rt_enh_dfsmn.cc  rt_enh_transformer.cc
doc/: code.md  enhancement.md  instruction.md  overview.md  recognition.md  separation.md
docker/: Dockerfile  README.md  pt1.3.1-py3.7-cuda10.0-ubuntu18.04.Dockerfile  pt1.6.0-py3.8-cuda10.2-ubuntu18.04.Dockerfile
docs/: code.md  feature.md  instruction.md  issue.md  overview.md  qa.md
examples/: README.md
examples/sse/torchscript_dcunet/: CMakeLists.txt  README.md  dcunet-enhan.cc
local/: run_bpe.sh  text2index.py  text2token.py  token2idx.pl  tokenizer.pl  wer_output_filter
scrips/: decode.sh  train_lm.sh
scripts/: archive_wav.sh  decode.sh  decode_parallel.sh  distributed_train.sh  distributed_train_am.sh  distributed_train_ss.sh  get_wav_dur.sh  init_workspace.sh  train.sh  train_am.sh  train_lm.sh  train_ss.sh
src/: batch_decode.py  blind_separate.py  compute_att_ali.py  compute_mvdr_stats.py  compute_sisnr.py  compute_wer.py  decode.py  eval_bss.py  launch_distributed_train_am.py  launch_distributed_train_ss.py  ngram_rescore.py  train_am.py  train_lm.py  train_ss.py  train_unsuper_enh.py
tests/: check_cmds.sh  check_decoding.sh  test_dataloader.py  test_function.py  test_jit_asr.py  test_jit_transform.py  test_lr_scheduler.py  test_nnet_asr.py  test_nnet_sep.py  test_nnet_sse.py  test_sep_nnet.py  test_task.py  test_task_asr.py  test_task_sep.py  test_torchscript_asr.py  test_torchscript_sse.py  test_transform.py
tests/csrc/: CMakeLists.txt  test-arg.cc  test-fft.cc  test-pipeline.cc  test-stft.cc  test-torch-stft.cc  test-utils-stft.cc  test-wav.cc
utils/: archive_wav.py  count_label.py  run.pl  subword.sh  token2idx.pl  tokenizer.pl  tokenizer.py  utt2spk_to_spk2utt.pl  wav_duration.py
(+413 files in other folders)
